--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
+    "random-stuff-api": "^10.2.3",
     "sequelize": "^6.11.0",
     "unsplash-js": "^7.0.15"
   },
