--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.6",
+    "node-wordnet": "^0.1.12",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "sequelize": "^6.11.0",
-    "unsplash-js": "^7.0.15"
+    "sequelize-cli": "^6.3.0",
+    "unsplash-js": "^7.0.15",
+    "wndb-with-exceptions": "^3.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
